--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
+  padding-top: 100px;
   color: white;
+}
+
+button {
+  margin-bottom: 20px;
+  width: 200px;
+  height: 40px;
+  background-color: coral;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .App-link {
