--- a/src/App.css
+++ b/src/App.css
@@ -26,13 +26,24 @@
 }
 
 button {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   width: 200px;
   height: 40px;
   background-color: coral;
+  color: white;
+  font-weight: bold;
   border: none;
   outline: none;
   cursor: pointer;
+}
+
+li {
+  margin-bottom: 10px;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 3px;
+  list-style-type: none;
+  letter-spacing: 3px;
 }
 
 .App-link {
