--- a/src/App.css
+++ b/src/App.css
@@ -25,11 +25,15 @@
   color: white;
 }
 
+.container {
+  margin-bottom: 150px;
+}
+
 button {
   margin-bottom: 30px;
   width: 200px;
   height: 40px;
-  background-color: coral;
+  background-color: #6667AB;
   color: white;
   font-weight: bold;
   border: none;
