--- a/src/App.css
+++ b/src/App.css
@@ -26,13 +26,14 @@
 }
 
 .container {
-  margin-bottom: 150px;
+  margin-bottom: 50px;
 }
 
 button {
   margin-bottom: 30px;
   width: 200px;
   height: 40px;
+  border-radius: 40px;
   background-color: #6667AB;
   color: white;
   font-weight: bold;
