--- a/src/App.css
+++ b/src/App.css
@@ -25,16 +25,20 @@
   color: white;
 }
 
+.numbers-container {
+  height: 80%;
+}
+
 .container {
   margin-bottom: 50px;
 }
 
 button {
-  margin-bottom: 30px;
+  margin-top: 50px;
   width: 200px;
   height: 40px;
   border-radius: 40px;
-  background-color: #6667AB;
+  background-color: #6667ab;
   color: white;
   font-weight: bold;
   border: none;
