--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
+  width: 100%;
+  height: 100%;
+
   text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .App-logo {
@@ -14,14 +22,15 @@
 }
 
 .App-header {
+  width: 100%;
+  height: 100vh;
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   /* justify-content: center; */
   font-size: calc(10px + 2vmin);
-  padding-top: 100px;
+  /* padding-top: 100px; */
   color: white;
 }
 
